--- a/MovieCardAPI/appsettings.json
+++ b/MovieCardAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MovieCardAPIContext": "Server=(localdb)\\mssqllocaldb;Database=MovieCardDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
